# mosaic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  auto.bat  auto.sh  conanfile.txt
include/: FormUtilities.h  GSImage.h  Histogram.h  Image.h  ResizeManager.h  SimilarityManager.h
src/: FormUtilities.cpp  GSImage.cpp  Histogram.cpp  Image.cpp  ResizeManager.cpp  SimilarityManager.cpp  main.cpp
